fix/CA-1.7: compunt interest
