# src/infrastructure/modules/FinancialControl/infrastructure/dtos/response/FinancialAccountCompoundInterestResponseDto.ts
@@ -1,0 +1,6 @@
+export type FinancialAccountCompoundInterestResponseDto = {
+  totalCapital: string;
+  initialCapital: string;
+  contribution: string;
+  interest: string;
+}[];
